--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "dependencies": {
     "next": "10.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-inlinesvg": "^2.3.0",
+    "react-is": "^17.0.2",
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
     "@types/node": "^15.0.1",
     "@types/react": "^17.0.4",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
+    "babel-plugin-styled-components": "^1.12.0",
     "eslint": "7.25.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
