--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-inlinesvg": "^2.3.0",
     "react-is": "^17.0.2",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "swr": "^0.5.5"
   },
   "devDependencies": {
     "@types/node": "^15.0.1",
