--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -58,5 +58,9 @@
       "version": "detect"
     },
     "import/resolver": { "typescript": {} }
+  },
+  "globals": {
+    "React": true,
+    "JSX": true
   }
 }
